--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -9,7 +9,7 @@ number_sections: true
 toc_depth: 3
 ---
 
-```{r setup, echo=FALSE, warning=FALSE, message=FALSE}
+```{r setup, message=FALSE, warning=FALSE}
 
 knitr::opts_chunk$set(echo = TRUE)
 
@@ -17,15 +17,13 @@ library(matlib)
 library(tidyverse)
 library(scales)
 library(reticulate)
-if(reticulate::py_available()) message("Python 3 found.")
+use_python("/usr/bin/python3")
 
 knitr::opts_knit$set(root.dir = "~/Devel/momentspp/benchmarking/")
 ```
 
 # Setting up scenarios to test (parameter combinations)
 ## 1_population parameters
-
-## TODO: write multiple models in the same YAML file using --- separator?
 
 ```{r 1-pop-params, message=FALSE, warning=FALSE}
 
@@ -34,7 +32,6 @@ mu <- c(1e-8, 1e-7, 1e-6)
 N <- c(1e+3, 1e+4, 1e+5)
 
 params_1_pop <- crossing(N, mu, r) %>% arrange(N, mu, r)
-
 write.csv(params_1_pop, "params_1_pop.csv", quote = F, sep = ",", row.names = F)
 ```
 
@@ -55,51 +52,86 @@ N_0_epoch_2 <- N_0 / 10
 N_1_epoch_2 <- N_1 / 10
 
 params_2_pop <- crossing(num_epochs, mu, r , m_01, m_10, N_0, N_1) 
-params_2_pop <- mutate(params_2_pop, N_0_epoch_2 = case_when(num_epochs == 1 ~ NA_real_, num_epochs == 2 ~ (N_0 / 10)))
-params_2_pop <- mutate(params_2_pop, N_1_epoch_2 = case_when(num_epochs == 1 ~ NA_real_, num_epochs == 2 ~ (N_1 / 10)))
-params_2_pop <- mutate(params_2_pop, num_gen_epoch_2 = case_when(num_epochs == 1 ~ NA_real_, num_epochs == 2 ~ 5000))
+params_2_pop <- mutate(params_2_pop, 
+                       N_0_epoch_2 = case_when(num_epochs == 1 ~ NA_real_,
+                                               num_epochs == 2 ~ (N_0 / 10)))
+params_2_pop <- mutate(params_2_pop, 
+                       N_1_epoch_2 = case_when(num_epochs == 1 ~ NA_real_,
+                                               num_epochs == 2 ~ (N_1 / 10)))
+params_2_pop <- mutate(params_2_pop, 
+                       num_gen_epoch_2 = case_when(num_epochs == 1 ~ NA_real_, 
+                                                   num_epochs == 2 ~ 5000))
 
-write.csv(params_2_pop, "params_2_pops.csv", sep = ",", quote = F, row.names = F, col.names = T)
+write.csv(params_2_pop, "params_2_pops.csv", sep = ",", 
+          quote = F, row.names = F, col.names = T)
 ```
 
 # Running moments++
 
-```{bash run-moments++, engine.opts='-l'}
+```{bash run-moments++, engine.opts='-i', message=FALSE, warning=FALSE}
+
+source ~/.bashrc
 
 # 1 population
 input="params_1_pop.csv";
-((id=id+1)); # line counter, scenario_id
-read "$input" # ignores header 
+id=1 # line counter, scenario_id
 
-while IFS=, read -r a b c; do
-  momentspp params=opt_1.bpp i=$id N=$a u=$b r=$c;
-  id+=1;
-done < "$input"
+{
+  read # ignores header 
+  while IFS=, read -r a b c; do
+    momentspp params=opt_1.bpp i=$id N=$a u=$b r=$c
+    ((id=id+1))
+  done
+} < "$input"
 
 # 2 populations
 input="params_2_pops.csv";
-((id=id+1)); # line counter, scenario_id
-read "$input" # ignores header 
+id=1 # line counter, scenario_id
 
-while IFS=, read -r a b c d e f g h i j; do
-  momentspp params=opt_1.bpp i=$id epochs=$a N0=$f N1=$g m01=$d m10=$e u=$b r=$c;
-  id+=1;
-done < "$input"
+{
+  read # ignores header 
+  while IFS=, read -r a b c d e f g h i j
+  do
+    momentspp params=opt_2.bpp i=$id epochs=$a N0=$f N1=$g m01=$d m10=$e u=$b r=$c
+    ((id=id+1))
+  done 
+} < "$input"
 
 ```
 
 # Running moments.LD
 
-```{python run-momentsLD, eval=FALSE, include=FALSE}
+```{python run-momentsLD, message=FALSE, warning=FALSE}
 
 import moments.LD
 
+# 1 population
+with open("params_1_pop.csv") as fin:
+    params = fin.readlines()
+
+p_names = params[0].strip().split(",")
+
+with open("moments_LD_1_pop_out.csv", "w+") as fout:
+    stats = moments.LD.Util.moment_names(2)
+    l = ",".join(stats[0] + stats[1]) + "\n"
+    fout.write(l)
+    for p_list in params[1:]:
+        N = eval(p_list[p_names.index('N')])
+        u = eval(p_list[p_names.index('mu')])
+        r = eval(p_list[p_names.index('r')])
+        rho = 4 * N * r
+        theta = 4 * N * u
+        y = moments.LD.Demographics1D.snm(rho, theta)
+        l = ",".join([str(_) for _ in y.LD()[0]]) + "\n"
+        fout.write(l)
+      
+# 2 populations
 with open("params_2_pops.csv") as fin:
     params = fin.readlines()
 
 p_names = params[0].strip().split(",")
 
-with open("moments_LD_out.csv", "w+") as fout:
+with open("moments_LD_2_pops_out.csv", "w+") as fout:
     stats = moments.LD.Util.moment_names(2)
     l = ",".join(stats[0] + stats[1]) + "\n"
     fout.write(l)
@@ -132,132 +164,110 @@ with open("moments_LD_out.csv", "w+") as fout:
         fout.write(l)
 ```
 
-# Accuracy in 1_pop scenarios
+# 1-population plots
 
-```{r, message=FALSE, warning=FALSE}
+```{r}
 
 params_1_pop <- read.csv("params_1_pop.csv", header = T, sep = ",")
 num_scenarios <- nrow(params_1_pop)
-  
-steadyStateTable <- as.data.frame(matrix(num_scenarios, ncol = num_stats))
-finalMomentsTable <- as.data.frame(matrix(num_scenarios, ncol = num_stats))
 
-#names(steadyStateTable) <- 
-#names(finalMomentsTable) <- 
+# extracting names of moments
+stats_1_pop <- read.table("1-pop_scenario_1_final_unsorted.txt")[,1]
+num_stats <- length(stats_1_pop)
 
-idx = 1
+momspp <- as_tibble(matrix(nrow=num_scenarios, ncol=num_stats), .name_repair = "unique")
+names(momspp) <- stats_1_pop
+
+idx=1
 for(i in 1:num_scenarios) {
-      
-  #s <- t(read.table(paste(paste(", "/steady_state.txt", sep = ""))$V5)
-  #f <- t(read.table(paste(paste("accuracy/pops_1", a[x], b[y], c[z], sep = "/"), "/final_moments.txt", sep = ""))$V5)
-      
-  #steadyStateTable[idx,] <- s
-  #finalMomentsTable[idx,] <- f
-      
-  idx = idx + 1
+  tmp <- read.table(paste("1-pop_scenario_", idx, "_final_unsorted.txt", sep=""))
+  momspp[idx,] <- t(tmp[ncol(tmp)])
+  idx=idx + 1
 }
 
-stats <- bind_cols(bind_rows(steadyStateTable, finalMomentsTable), bind_rows(params_1_pop, params_1_pop))
-stats$type <- c(rep("steady", num_scenarios), rep("final", num_scenarios))
+stats <- bind_cols(momspp, params_1_pop)
+write.table(stats, "bench_1_pop_momentspp.csv", sep=",", row.names=F, quote=F)
 
-write.table(stats, "accuracy/bench_1_pop_moments.csv", sep = ",", row.names = F, quote = F)
+dat_stats <- pivot_longer(stats, cols=all_of(stats_1_pop), names_to="variable")
 
-dat_stats <- pivot_longer(stats, cols = all_of(p1_stats), names_to = "variable")
-
-p <- ggplot(data = dat_stats, aes(x = variable, y = value, shape = type, color = as.factor(N))) + facet_grid(r~mu)
-p <- p + geom_point(size = 5) + theme_bw()
-p <- p + scale_shape_manual(values = c(0, 1, 2, 3, 4))
-p <- p + scale_y_continuous(trans = "log10")
-p <- p + labs(title = "1-Epoch Moments x r (rows) and u (cols)", x = "Moment", y = "Value")
-p <- p + theme(axis.title = element_text(size = 20), axis.text = element_text(size = 14), legend.position = "bottom")
+p <- ggplot(data=dat_stats, aes(x=variable, y=value, shape=as.factor(N)))
+p <- p + geom_point(size=5) + theme_bw() + facet_grid(r~mu)
+p <- p + scale_shape_manual(values=c(0, 1, 2, 3, 4))
+p <- p + scale_y_continuous(trans="log10")
+p <- p + labs(title="1-Pop Moments x r (rows) and u (cols)",
+              x="Moment", y="Value", shape="N")
+p <- p + theme(axis.title=element_text(size=20),
+               axis.text=element_text(size=14),
+               axis.text.x=element_text(angle = 90, vjust = 0.5, hjust=1),
+               legend.position="bottom")
 p
 
-ggsave("accuracy/moments_1_pop.png", p, device = "png", width = 12, height = 12)
+ggsave("moments++_1_pop.png", p, device="png", width=12, height=12)
 ```
 
-# Accuracy in 2_pops scenarios
+# 2-populations plots
 
 ## moments++ 
 
-```{r, message=FALSE, warning=FALSE}
+```{r eval=FALSE, include=FALSE}
 
-params_2_pop <- read.csv("params_2_pops.csv", header = T, sep = ",")
-num_scenarios <- nrow(params_2_pop)
+params_2_pops <- read.csv("params_2_pops.csv", header=T, sep=",")
+num_scenarios <- nrow(params_2_pops)
 
-pop_indices <- c(0, 1)
-DD_stats <- NULL
-Dz_stats <- NULL
-H_stats <- NULL
-pi2_stats <- NULL
+# extracting names of moments
+stats_2_pops <- read.table("2-pops_scenario_1_final_unsorted.txt")[,1]
+num_stats <- length(stats_2_pops)
 
-p2_stats <- c(DD_stats, Dz_stats, H_stats, "I", pi2_stats)
-num_stats <- length(p2_stats)
+momspp <- as_tibble(matrix(nrow=num_scenarios, ncol=num_stats), .name_repair="unique")
+names(momspp) <- stats_2_pops
 
-a <- c("zero_rec", "nonzero_rec")
-b <- c("single_epoch", "two_epochs")
-c <- c("asymmetric_mig", "symmetric_mig")
-d <- c("diff_Ne", "same_Ne")
-
-steadyStateTable <- as.data.frame(matrix(nrow = num_scenarios, ncol = num_stats))
-finalMomentsTable <- as.data.frame(matrix(nrow = num_scenarios, ncol = num_stats))
-
-idx = 1
-for(i in num_scenarios) {
-        
-  steady_state <- read.table(paste(paste("pops_2", a[x], b[y], c[z], d[w], sep = "/"), "/steady_state.txt", sep = ""))
-  steadyStateTable[idx,] <- t(steady_state$V5)
-        
-  final_moments <- read.table(paste(paste("pops_2", a[x], b[y], c[z], d[w], sep = "/"), "/final_moments.txt", sep = ""))
-  finalMomentsTable[idx,] <- t(final_moments$V5)
-        
-  idx = idx + 1
+idx=1
+for(i in 1:num_scenarios) {
+  tmp <- read.table(paste("2-pops_scenario_", idx, "_final_unsorted.txt", sep=""))
+  momspp[idx,] <- t(tmp[ncol(tmp)])
+  idx=idx + 1
 }
 
-names(steadyStateTable) <- p2_stats
-names(finalMomentsTable) <- p2_stats
+stats <- bind_cols(momspp, params_2_pops)
+write.table(stats, "moments++_2_pops_stats.csv", sep=",", row.names=F, quote=F)
 
-steadY <- bind_cols(steadyStateTable, params_2_pop)
-finY <- bind_cols(finalMomentsTable, params_2_pop)
-
-stats <- bind_rows(steadY, finY)
-stats$type <- c(rep("steady", num_scenarios), rep("final", num_scenarios))
-
-write.table(stats, "moments++_2_pops_stats.csv", sep = ",", row.names = F, quote = F)
-
-dat_stats <- pivot_longer(stats, cols = all_of(p2_stats), names_to = "variable")
+dat_stats <- pivot_longer(stats, cols=all_of(stats_2_pops), names_to="variable")
 
 # one epoch plot
-p1 <- ggplot(data = filter(dat_stats, num_epochs == 1), aes(x = variable, y = value, shape = type, color = as.factor(r))) + facet_grid(N_0~m_01)
-p1 <- p1 + geom_point(size = 5) + theme_bw()
-p1 <- p1 + scale_shape_manual(values = c(0, 1))
+p1 <- ggplot(data=filter(dat_stats, num_epochs==1), aes(x=variable, y=value, shape=as.factor(r))) 
+p1 <- p1 + geom_point(size=5) + theme_bw() + facet_grid(N_0~m_01)
+p1 <- p1 + scale_shape_manual(values=c(0, 1))
 p1 <- p1 + labs(title = "1-Epoch Moments x N_0 (rows) and m_01 (cols)", x = "Moment", y = "Value")
 p1 <- p1 + scale_y_continuous(trans = "log10")
 p1 <- p1 + theme(axis.title = element_text(size = 20), axis.text = element_text(size = 14), axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1), legend.position = "bottom")
 p1
 
-ggsave("accuracy/moments_1-epoch.png", p1, device = "png", width = 12, height = 12)
+ggsave("moments++_2_pops_1_epoch.png", p1, device="png", width=12, height=12)
 
 # two epochs plot
-p2 <- ggplot(data = filter(dat_stats, num_epochs == 2), aes(x = variable, y = value, shape = type, color = as.factor(r))) + facet_grid(N_0~m_01)
-p2 <- p2 + geom_point(size = 5) + theme_bw()
-p2 <- p2 + scale_shape_manual(values = c(0, 1))
-p2 <- p2 + labs(title = "2-Epoch Moments x N_0 (rows) and m_01 (cols)", x = "Moment", y = "Value")
+p2 <- ggplot(data=filter(dat_stats, num_epochs==2), aes(x=variable, y=value, shape=as.factor(r)))
+p2 <- p2 + geom_point(size=5) + theme_bw() + facet_grid(N_0~m_01)
+p2 <- p2 + scale_shape_manual(values=c(0, 1))
+p2 <- p2 + labs(title="2-Epoch Moments x N_0 (rows) and m_01 (cols)", x="Moment", y="Value")
 p2 <- p2 + scale_y_continuous(trans = "log10")
-p2 <- p2 + theme(axis.title = element_text(size = 20), axis.text = element_text(size = 14), axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1), legend.position = "bottom")
+p2 <- p2 + theme(axis.title=element_text(size=20),
+                 axis.text=element_text(size=14), 
+                 axis.text.x=element_text(angle=90, vjust=0.5, hjust=1),
+                 legend.position="bottom")
 p2
 
-ggsave("accuracy/moments_2-epochs.png", p2, device = "png", width = 12, height = 12)
+ggsave("moments++_2_pops_2_epochs.png", p2, device = "png", width = 12, height = 12)
 ```
 
 
 ## Comparison with moments.LD 
 
-```{r, message=FALSE, warning=FALSE}
+```{r eval=FALSE, include=FALSE}
 
 py_moments <- read.csv("moments_LD_out.csv") # output file from python chunk above
 
-common_moments <- intersect(names(finalMomentsTable), names(py_moments))
-match_moments <- bind_rows(select(finalMomentsTable, all_of(common_moments)), select(py_moments, all_of(common_moments)))
+common_moments <- intersect(names(momsppTable), names(py_moments))
+match_moments <- bind_rows(select(momsppTable, all_of(common_moments)), select(py_moments, all_of(common_moments)))
 match_moments$scenario <- rep(seq(1:num_scenarios), 2)
 match_moments$method <- c(rep("moments++", num_scenarios), rep("moments.LD", num_scenarios))
 full_tbl <- bind_cols(match_moments, bind_rows(params_2_pop, params_2_pop)) # binds parameters together with moments
@@ -346,7 +356,7 @@ ggsave("accuracy/moments_2-epoch_moments++_vs_moments.LD.png", p7, device = "png
 
 # Timing method for matrix multiplication
 
-```{r, message=FALSE, warning=FALSE}
+```{r eval=FALSE, message=FALSE, warning=FALSE, include=FALSE}
 
 pop_scenarios <- 2^(0:3)
 MultTimeTable <- as.data.frame(matrix(nrow = length(pop_scenarios), ncol = 5))
